--- a/src/main/resources/templates/ajax/bookingInput.html
+++ b/src/main/resources/templates/ajax/bookingInput.html
@@ -108,7 +108,8 @@
 					,"phoneNumber" : phoneNumber}
 				,success:function(response){
 
-					if(response.result == "success"){						
+					if(response.result){
+						alert("예약이 완료되었습니다");
 						location.href = "/booking/list";
 					}else{
 						alert("실행오류");
