--- a/src/main/resources/templates/ajax/bookingList.html
+++ b/src/main/resources/templates/ajax/bookingList.html
@@ -45,8 +45,18 @@
 						<td th:text="${booking.day}">숙박일수</td>
 						<td th:text="${booking.headcount}">숙박인원</td>
 						<td th:text="${booking.phoneNumber}">전화번호</td>
+						
 						<td th:if="${booking.state} == '확정'" th:text="${booking.state}" class="text-success">예약상태</td>
 						<td th:unless="${booking.state} == '확정'" th:text="${booking.state}" class="text-primary">예약상태</td>
+						<!-- 
+						<td th:switch=${booking.state}>
+							<span th:case="확정" class="text-success">확정</span>
+							<span th:case="취소" class="text-danger">취소</span>
+							<span th:case="*" class="text-primary">대기중</span>
+						</td>
+						
+						 -->
+						
 						<td><button class="btn btn-danger deleteBtn" th:value="${booking.id}">삭제</button>
 						<!-- data 속성 => data-속성이름 => 변수처럼 쓸수있다 -->
 						<!-- th:data-favorite-id="${favorite.id}" -->
